Literales por fin extraídos y CalendarioPAge recuperando valores de ahí

--- a/Frontend/public/locales/es/translation.json
+++ b/Frontend/public/locales/es/translation.json
@@ -191,5 +191,29 @@
   "numeroinvitado": "numeroInvitado",
   "tu-numero-de-telefono_1": "Tu número de teléfono:",
   "recibiras-confirmacion-por-whatsapp": "Recibirás confirmación por WhatsApp",
-  "unirme-a-la-partida": "Unirme a la Partida"
+  "unirme-a-la-partida": "Unirme a la Partida",
+  "key": "/",
+  "selecciona-un-horario-para-ver-las-pistas-y-contin": "Selecciona un horario para ver las pistas y continuar con la reserva.",
+  "key_1": "❌",
+  "key_2": "✅",
+  "ya-puedes-comenzar-a-recibir-invitaciones-para-par": "Ya puedes comenzar a recibir invitaciones para partidas según tus preferencias.",
+  "key_3": "🎮",
+  "verifica-que-la-informacion-es-correcta-antes-de-c": "Verifica que la información es correcta antes de confirmar tu registro",
+  "se-enviara-un-whatsapp-de-confirmacion-al-numero": "Se enviará un WhatsApp de confirmación al número:",
+  "key_4": "+",
+  "recibiras-notificaciones-de-partidas-disponibles-s": "Recibirás notificaciones de partidas disponibles según tus preferencias.",
+  "notificaciones-invitaciones-partidas-abiertas": "Notificaciones (invitaciones partidas abiertas)",
+  "key_5": "-",
+  "numero-maximo-de-invitaciones-que-recibiras-por-se": "Número máximo de invitaciones que recibirás por semana",
+  "selecciona-los-momentos-del-dia-en-los-que-prefier": "Selecciona los momentos del día en los que prefieres jugar",
+  "tus-datos-estan-protegidos-y-solo-se-usaran-para-g": "Tus datos están protegidos y solo se usarán para gestionar partidas",
+  "se-ha-enviado-una-confirmacion-a-tu-numero-de-what": "Se ha enviado una confirmación a tu número de WhatsApp.",
+  "key_6": "⚠️",
+  "estas-seguro-que-deseas-cancelar-esta-partida": "¿Estás seguro que deseas cancelar esta partida?",
+  "por-ejemplo-no-puedo-asistir-tengo-un-compromiso": "Por ejemplo: No puedo asistir, tengo un compromiso",
+  "solo-puedes-cancelar-partidas-con-al-menos-5-horas": "Solo puedes cancelar partidas con al menos 5 horas de antelación.",
+  "se-ha-enviado-una-notificacion-a-los-jugadores-afe": "Se ha enviado una notificación a los jugadores afectados.",
+  "al-eliminar-un-jugador-se-actualizara-el-estado-d": "Al eliminar un jugador, se actualizará el estado de la partida y se enviarán notificaciones.",
+  "no-hay-jugadores-invitados-en-esta-partida": "No hay jugadores invitados en esta partida.",
+  "estas-seguro-que-deseas-unirte-a-esta-partida": "¿Estás seguro que deseas unirte a esta partida?"
 }
