--- a/Frontend/public/locales/es/translation.json
+++ b/Frontend/public/locales/es/translation.json
@@ -80,7 +80,7 @@
   "introduce-tu-nombre-completo": "Introduce tu nombre completo",
   "telefono_1": "telefono",
   "numero-de-telefono": "Número de teléfono",
- "212_1": "🇲🇦 +212",
+  "212_1": "🇲🇦 +212",
   "34_1": "🇪🇸 +34",
   "54_1": "🇦🇷 +54",
   "1_1": "🇺🇸 +1",
@@ -216,5 +216,9 @@
   "abierta": "abierta",
   "abiertas": "abiertas",
   "partida abierta": "partida abierta",
-  "partidas abiertas": "partidas abiertas"
+  "partidas abiertas": "partidas abiertas",
+
+  "registro-confirmacion": "Tu número ha sido confirmado correctamente",
+  "registro-error": "Ha ocurrido un error al confirmar su número",
+  "registro-error-datos": "Ha ocurrido un error recuperando los datos, el enlace podría ser inválido"
 }
