--- a/Frontend/public/locales/fr/translation.json
+++ b/Frontend/public/locales/fr/translation.json
@@ -241,6 +241,8 @@
   "message-union-success": "Tu as rejoint la partie!",
   "message-union-error": "Une erreur s'est produite lors de la participation à la partie; vous devez être inscrit dans le système",
 
+  "btn-confirmar-eliminacion-jugador": "Confirmer la suppression",
+
   "filtrar-por-pista": "Filtrer par court:",
   "no-hay-slots-para-las-pistas-seleccionadas": "Aucun créneau disponible pour les courts sélectionnés"
 }
