--- a/Frontend/public/locales/es/translation.json
+++ b/Frontend/public/locales/es/translation.json
@@ -241,6 +241,8 @@
   "message-union-success": "Te has unido a la partida!",
   "message-union-error": "Ha ocurrido un error al unirte a la partida, debes estar registrado en el sistema",
 
+  "btn-confirmar-eliminacion-jugador": "Confirmar eliminación",
+
   "filtrar-por-pista": "Filtrar por pista:",
   "no-hay-slots-para-las-pistas-seleccionadas": "No hay slots disponibles para las pistas seleccionadas"
 }
